Added most necessary things for email updating